--- a/lgsoar/.project
+++ b/lgsoar/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>sandbox-June11</name>
+	<name>lgsoar</name>
 	<comment></comment>
 	<projects>
 	</projects>
