--- a/lgsoar/.classpath
+++ b/lgsoar/.classpath
@@ -5,5 +5,5 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="/opt/bolt/soar/share/java/soar-debugger-9.3.1.jar" sourcepath="/opt/bolt/soar/SoarSuite/Java/Debugger/src/main/java"/>
 	<classpathentry kind="lib" path="/opt/bolt/soar/share/java/sml.jar"/>
-	<classpathentry kind="output" path="src"/>
+	<classpathentry kind="output" path="bin"/>
 </classpath>
