--- a/sbolt.properties.example
+++ b/sbolt.properties.example
@@ -1,6 +1,10 @@
-#agent = agent/obj-analyzer/obj-analyzer.soar
 agent = agent/verb-execution/verb-execution.soar
 
 enable-lgsoar = true
 lgsoar-productions = lgsoar/soarcode/bolt-lgsoar.soar
 lgsoar-dictionary = lgsoar/data/link
+
+decision-throttle-ms = 10
+
+enable-log = true
+watch-level = 1
