--- a/lgsoar/build.xml
+++ b/lgsoar/build.xml
@@ -39,6 +39,7 @@
        deprecation="yes"
        source="1.5"
        target="1.5"
+			 includeantruntime="false"
        >
     </javac>
   </target>
