final changes for language code reorganization. CHANGES YOU WILL PROBABLY NEED TO MAKE: check your environment variables for references to stbolt/lgsoar, change to stbolt/language re-copy sbolt.properties.example to sbolt.properties fix references in Eclipse to lgsoar/lgsoar.jar, now language/lgsoar.jar

--- a/sbolt.properties.example
+++ b/sbolt.properties.example
@@ -1,7 +1,7 @@
 agent = agent/verb-execution/verb-execution.soar
 
 enable-lgsoar = true
-lgsoar-productions = language/soarcode/load.soar
+language-productions = language/soarcode/load.soar
 lgsoar-dictionary = language/data/link
 
 decision-throttle-ms = 10
