Added the ability to ask the agent what the current interaction is and it will respond appropriately

--- a/sbolt.properties.example
+++ b/sbolt.properties.example
@@ -1,4 +1,5 @@
 agent = agent/verb-execution/verb-execution.soar
+smem-source = agent/verb-execution/smem_source.soar
 
 enable-lgsoar = true
 language-productions = language/soarcode/load.soar
