--- a/.project
+++ b/.project
@@ -20,8 +20,14 @@
 				</dictionary>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>com.soartech.soar.ide.builder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>com.soartech.soar.ide.nature</nature>
 	</natures>
 </projectDescription>
